<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddActivity">
    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/Add_Item"
        android:textColor="@color/orange"
        android:textSize="24sp"
        />
    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_done_24"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/addNoteHeading"
        android:layout_marginEnd="6dp"
        />
    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/Title"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@id/addNoteHeading"
        android:background="@drawable/orange_border"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/Description"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/titleEditText"
        android:layout_marginTop="12dp"
        />
    <!-- ImageView to display the selected image -->
    <ImageView
        android:id="@+id/selectedImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/contentEditText"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        android:contentDescription="Selected Image"
        android:background="@drawable/orange_border"
         />

    <!-- Button to trigger image selection -->
    <ImageButton
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_image_24"
        android:layout_below="@id/selectedImageView"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="Select Image"
        android:background="?attr/selectableItemBackgroundBorderless" />
    <EditText
        android:id="@+id/sizeEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Size"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/selectImageButton"
        android:layout_marginTop="12dp"
        />
    <EditText
        android:id="@+id/colorEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Color"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/sizeEditText"
        android:layout_marginTop="12dp"
        />
    <EditText
        android:id="@+id/availabilityEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Quantity"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/colorEditText"
        android:layout_marginTop="12dp"
        />
    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Price"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/availabilityEditText"
        android:layout_marginTop="12dp"
        />
    <EditText
        android:id="@+id/discountEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Discount"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/orange_border"
        android:layout_below="@+id/priceEditText"
        android:layout_marginTop="12dp"
        />
</RelativeLayout>