<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllProductsActivity">

    <TextView
        android:id="@+id/allProductsHeading"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="126dp"
        android:layout_toStartOf="@+id/addButton"
        android:text="@string/All_Products"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/searchBarAllProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/allProductsHeading"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Search_Items"
        android:padding="12dp"
        android:drawableStart="@drawable/search_background"
        android:drawablePadding="8dp"
        android:inputType="text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allProductsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchBarAllProducts"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="100dp"
        android:padding="5dp" />

    <Button
        android:id="@+id/bottomCartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allProductsRecyclerView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="90dp"
        android:text="@string/Go_to_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bottomFavBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/allProductsRecyclerView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="-90dp"
        android:text="@string/favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="735dp"
        android:backgroundTint="@color/orange"
        android:src="@drawable/baseline_add_24"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/grImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="365dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/greek" />

    <ImageView
        android:id="@+id/engImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="321dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        app:srcCompat="@drawable/uk" />


</RelativeLayout>